# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

group("native_vulkan") {
  if (is_component_build) {
    public_deps = [
      "//gpu",
    ]
  } else {
    public_deps = [
      ":native_vulkan_sources",
    ]
  }
}

source_set("native_vulkan_sources") {
  sources = [
    "vulkan_implementation.cc",
    "vulkan_implementation.h",
    "vulkan_include.h",
  ]

  public_configs = [ "//third_party/vulkan:vulkan_headers", "//third_party/khronos:khronos_headers", ]

  deps = [
    "//base",
  ]

  defines = [ "NATIVE_VULKAN_IMPLMENTATION", "GPU_IMPLEMENTATION" ]
}
