# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")
import("//build/config/highweb.gni")

if (enable_highweb_webvkc) {
  group("native_vulkan") {
    if (is_component_build) {
      public_deps = [
        "//gpu",
      ]
    } else {
      public_deps = [
        ":native_vulkan_sources",
      ]
    }
  }

  source_set("native_vulkan_sources") {
    sources = [
      "vulkan_implementation.cc",
      "vulkan_implementation.h",
      "vulkan_include.h",
      "vulkan_shader_compiler.cc",
      "vulkan_shader_compiler.h",
    ]

    public_configs = [
      "//build/config:precompiled_headers",
      "//third_party/vulkan:vulkan_headers",
      "//third_party/khronos:khronos_headers",
      "//gpu:gpu_implementation",
    ]

    deps = [
      "//base",
      "//third_party/shaderc:libshaderc",
      "//net",
    ]
  }
}
