# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

component("native_vulkan") {
  sources = [
    "vulkan_implementation.cc",
    "vulkan_implementation.h",
    "vulkan_include.h",
  ]

  public_configs = [ "//third_party/vulkan:vulkan_headers", "//third_party/khronos:khronos_headers", ]

  deps = [
    "//base",
    "//ui/accessibility",
  ]

  defines = [ "NATIVE_VULKAN_IMPLMENTATION" ]
}
