# Copyright (C) 2016 INFRAWARE, Inc. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

android_library("calendar_manager_java") {
  java_files =
      [ "java/src/org/chromium/device/Calendar/CalendarManagerImpl.java" ]

  deps = [
    "//base:base_java",
    "//device/calendar:mojo_bindings_java",
    "//mojo/public/java:bindings_java",
    "//mojo/public/java:system_java",
    "//services/service_manager/public/java:service_manager_java",
    "//third_party/jsr-305:jsr_305_javalib",
  ]
}
