# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/highweb.gni")

source_set("cpp") {
  sources = [
    "device_light_data.h",
    "device_light_hardware_buffer.h",
    "device_motion_hardware_buffer.h",
    "device_orientation_hardware_buffer.h",
    "device_sensors_consts.h",
    "device_util_mac.cc",
    "device_util_mac.h",
  ]

  public_deps = [
    "//device/base/synchronization",
    "//third_party/WebKit/public:blink_headers",
  ]

  if (enable_highweb_deviceapi) {
    sources += [
      "device_proximity_data.h",
      "device_proximity_hardware_buffer.h",
    ]
  }
}
