# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "battery_monitor.mojom",
    "battery_status.mojom",
    "fingerprint.mojom",
    "nfc.mojom",
    "nfc_provider.mojom",
    "power_monitor.mojom",
    "time_zone_monitor.mojom",
    "vibration_manager.mojom",
    "wake_lock.mojom",
    "wake_lock_context.mojom",
    "wake_lock_provider.mojom",
    "calendar_manager.mojom",
    "calendar_ResultCode.mojom",
    "contact_manager.mojom",
    "devicecpu_manager.mojom",
    "devicecpu_ResultCode.mojom",
    "devicegallery_manager.mojom",
    "devicegallery_ResultCode.mojom",
    "devicesound_manager.mojom",
    "devicesound_resultData.mojom",
    "devicestorage_manager.mojom",
    "devicestorage_ResultCode.mojom",
    "devicethirdparty_manager.mojom",
    "messaging_manager.mojom",
  ]

  public_deps = [
    ":constants",
  ]

  # TODO(crbug.com/699569): Convert to use the new JS bindings.
  use_new_js_bindings = false
}

mojom("generic_sensor") {
  sources = [
    "sensor.mojom",
    "sensor_provider.mojom",
  ]

  public_deps = [
    ":constants",
  ]
}

mojom("constants") {
  sources = [
    "constants.mojom",
  ]

  # TODO(crbug.com/699569): Convert to use the new JS bindings.
  js_bindings_mode = "both"
}
